--- a/m23/doc/changelog
+++ b/m23/doc/changelog
@@ -1,3 +1,13 @@
+2013-06-24
+new: debian-update-howto.tex: Mini howto for 
+patch 100667: Added LXDE, GNOME 3 and TDE for Debian 7.
+cha: exportDBsourceslist.php: Now exports "wheezy" and "wheezy+squeeze+TDE" (for installing TDE with all needed packages from Squeeze) too.
++++++
+2013-06-22
+cha: CLCFG_installLightDM: Now has an extra parameter, if set to true, an additional line with "session-wrapper=/etc/X11/Xsession" will be added.
+new: LXDE_install: Installs the LXDE desktop.
+new: GNOME3_install: Installs the GNOME 3 desktop.
++++++
 2013-06-18
 cha: CLCFG_language: Now has an extra parameter for setting the release name of the distribution (for special handling).
 +++++
