--- a/m23/doc/changelog
+++ b/m23/doc/changelog
@@ -1,3 +1,11 @@
+2013-07-17
+cha: menuDeb / uploadtesting: Now uploads the files directly to FRS.
+cha: menuServerISO: Now shows the architecture too.
++++++
+2013-07-15
+cha: m23-tftp / postinst: Now restores backuped bootimages from /m23/tftp/bak2.6.
+new: PKG_exportSelectedPackages: Exports the wait4acc/selected packages of a client.;
++++++
 2013-07-13
 cha: ASSI_prepareClient, MSR_getClientSettingsCommand, MSR_CopyClientPackageStatusCommand, MSR_statusFileCommand: Now are checking, if a halfSister compatible distribution was found and skips the Debian-based distributions setup.
 new: HS_fetchm23HSAdminAndm23hwscannerByOS: Fetches the m23HSAdmin tool and m23hwscanner by detection of the OS.
