--- a/m23/doc/changelog
+++ b/m23/doc/changelog
@@ -1,10 +1,16 @@
+2013-07-18
+cha: install_packages.php: Now imports and exports the preselected packages of a clients from and to files.
+new: PKG_importSelectedPackagesFromFile: Imports space-seperated packages from a file and adds them to the wait4acc/selected packages of a client.
+new: HTML_uploadFile: Shows a dialog for uploading image files.
+new: HTML_urlButton: Defines a link that appears like a button.
++++++
 2013-07-17
 cha: menuDeb / uploadtesting: Now uploads the files directly to FRS.
 cha: menuServerISO: Now shows the architecture too.
 +++++
 2013-07-15
 cha: m23-tftp / postinst: Now restores backuped bootimages from /m23/tftp/bak2.6.
-new: PKG_exportSelectedPackages: Exports the wait4acc/selected packages of a client.;
+new: PKG_exportSelectedPackages: Exports the wait4acc/selected packages of a client.
 +++++
 2013-07-13
 cha: ASSI_prepareClient, MSR_getClientSettingsCommand, MSR_CopyClientPackageStatusCommand, MSR_statusFileCommand: Now are checking, if a halfSister compatible distribution was found and skips the Debian-based distributions setup.
