--- a/m23/doc/changelog
+++ b/m23/doc/changelog
@@ -1,3 +1,7 @@
+2013-07-30
+new: m23Debs.inc / rsyncUploadSpeedLimit: Determines the maximum upload speed.
+cha: install_packages.php: Now is using the HTML functions as often as possible.
++++++
 2013-07-18
 cha: install_packages.php: Now imports and exports the preselected packages of a clients from and to files.
 new: PKG_importSelectedPackagesFromFile: Imports space-seperated packages from a file and adds them to the wait4acc/selected packages of a client.
