--- a/m23/doc/changelog
+++ b/m23/doc/changelog
@@ -1,9 +1,17 @@
+2013-08-12
+cha: Kernel configuration: Changed ramdisk size to 80MB.
++++++
+2013-08-11
+cha: CLIENT_changeClient: Now checks, if the new IP is nonused.
++++++
 2013-08-10
 fix: HS_fetchm23HSAdminAndm23hwscannerByOS: Now the end mark for HSFETCHEOF is set correctly.
 cha: CLCFG_copySSLCert: Now disables ssl certificate checks for Linux Mint 11 and above.
 new: SERVER_isSSLCertCheckDisabled: Now determines, if the SSL certificate check is disabled globally for all clients.
 cha: CLCFG_copySSLCert: Now calls SERVER_isSSLCertCheckDisabled.
 new: SERVER_setSSLCertCheckDisabled: Sets, if the SSL certificate check is disabled globally for all clients.
+new: HTML_imgSwitch: Defines an image button with two states and a text next to it.
+cha: serverSettings.php: Now has a button to (de)activate the SSL certificate check globally for all clients.
 +++++
 2013-08-06
 new: SERVER_setServerSetting: Sets the value of a server setting.
