--- a/m23/doc/changelog
+++ b/m23/doc/changelog
@@ -1,3 +1,6 @@
+2013-09-04
+new: forkFunctions.inc / mergeChangelog: Merges the changelogs from release and development tree (if both are existing) or just copies the existing changelog.
++++++
 2013-09-02
 new: forkFunctions.inc / getm23Dir: description Shows the full path to the active m23 directory or exits with an error.
 new: forkFunctions.inc / getmdkDir: Shows the full path to the active mdk directory or exits with an error.
