--- a/m23/doc/changelog
+++ b/m23/doc/changelog
@@ -1,4 +1,12 @@
+2013-09-05
+new: forkFunctions.inc / downloadBazaarRepo: Downloads a Bazaar repository to the current directory.
+new: forkFunctions.inc / createNewBazaarRepo: Adds the files and directories of the current directory to a new Bazaar repository
+cha: forkFunctions.inc / copym23: Now calls createNewBazaarRepo.
++++++
 2013-09-04
+cha: SRCLST_packageInformationOlderThan: Now checks for a minimum size of the lists directory too.
+patch 100682: Improved merging of release and development changelog.
+cha: m23uploadChangelog: Now uses mergeChangelog.
 new: forkFunctions.inc / mergeChangelog: Merges the changelogs from release and development tree (if both are existing) or just copies the existing changelog.
 +++++
 2013-09-02
