--- a/m23/doc/changelog
+++ b/m23/doc/changelog
@@ -1,3 +1,10 @@
+2014-02-12
+fix: group_actions.php: Corrected reading of group name and group action to re-enable renaming of groups. (THX CLUBSKIES)
+fix: m23Backup / createBackupList: Added missing "then" and "fi". (THX CLUBSKIES)
++++++
+2014-02-05
+cha: createNewBazaarRepo: Now uses a hand-crafted .bzrignore file.
++++++
 2014-01-26
 cha: prepareOSDorCompression: Now sure that m23debs.list is deleted.
 +++++
