--- a/m23/doc/changelog
+++ b/m23/doc/changelog
@@ -1,3 +1,10 @@
+2016-06-17
+cha: m23 / postinst: Adds new field "keyValueStore" to the table "clients".
+new: CClient::setKeyValueStore: Sets a value in the key value store of the client.
+new: CClient::getKeyValueStore: Gets a value from the key value store of the client.
+cha: GRP_showGroupsAndCount: Was deleted and replaced by GRP_showGroupsAndCount2.
+cha: groups_overview.php: Now calls GRP_showGroupsAndCount.
++++++
 2016-06-16
 cha: CLCFG_installFirmware: Now filters out faulty bladerf firmware package.
 new; CPoolGUI::DEFINE_updatePackageIndexAndReSignPool: Defines a button for re-creating the Packages files and to re-sign the Release file.
