--- a/m23/doc/changelog
+++ b/m23/doc/changelog
@@ -1,3 +1,13 @@
+2016-06-19
+patch 100903: Preparing m23 16.3.
+cha: CGPGSign::hasConfigFile: Now uses SERVER_fileExists.
+cha: SRCLST_showEditor: Now adds only installed packages of a client to the download list.
++++++
+2016-06-18
+new: CClientLister::addKeyValueStoreFilter: Adds a filter to get only clients that have a key value pair set the client's key value store.
+new: CClientLister::getAllMatchingClients: Gets all clients matching all active filters.
+new: DB_getArrayAssoc: Fetches all results from a query.
++++++
 2016-06-17
 cha: m23 / postinst: Adds new field "keyValueStore" to the table "clients".
 new: CClient::setKeyValueStore: Sets a value in the key value store of the client.
