--- a/m23/doc/changelog
+++ b/m23/doc/changelog
@@ -1,3 +1,7 @@
+2016-07-05
+patch 100906: Added system proxy.
+cha: addToHosts.php, migrate.php, m23shared.php, capture.php, CClientLister.php, CClient.php, CFDiskAlles.php, CFDiskIO.php, client.php, db.php, fdisk.php, groups.php, i18n.php, messageReceive.php, packages.php, plugin.php, preferences.php, remotevar.php, sourceslist.php and vm.php: Renamed function calls form "db_query" to "DB_query".
++++++
 2016-07-04
 new: CSYSTEMPROXY_getAptGetProxyParamter: Generates the apt-get proxy parameters.
 cha: PKG_previewInstallDeinstall, PKG_preparePackageDir, CLCFG_updateDebootstrapScripts: Now are using CSYSTEMPROXY_getAptGetProxyParamter.
