--- a/m23/doc/changelog
+++ b/m23/doc/changelog
@@ -1,3 +1,9 @@
+2016-10-06
+new: EDIT_replaceLineElseAdd: Deletes all lines, that match regular expression, afterwards adds a given line (Thx TS)
++++++
+2016-09-26
+cha: debian / ubuntu / clientInstall.php: Now installs apt-transport-https before the base packages, because SourceForge now uses HTTPs transparently for distributing the Debian packages.
++++++
 2016-09-05
 patch 100913: Added new recovering option to combine identical jobs.
 cha: client_details.php: New icon for client recovery with combining identical jobs.
